# vrchat-ime-chat

./: .clinerules  .gitignore  .goreleaser.yaml  Cargo.toml  LICENSE  README.md  Taskfile.yaml  app.go  go.mod  installer.nsi  main.go  pyproject.toml  wails.json
.github/workflows/: ci.yml  rust.yml  setup-build-tools.yml  website.yml
frontend/: index.html  package.json  package.json.md5  pnpm-lock.yaml  tailwind.config.cjs
frontend/src/: App.tsx  i18n.ts  main.tsx  style.css
frontend/src/components/chat/: CharacterCounter.tsx  ChatForm.tsx  MessageHistory.tsx  StatusMessage.tsx
frontend/src/components/layout/: MainLayout.tsx
frontend/src/components/settings/: FontSizeSettings.tsx  LanguageSettings.tsx  SendShortcutSettings.tsx  SettingsDialog.tsx  ShortcutInput.tsx  ThemeSettings.tsx  TypingStatusSettings.tsx
frontend/src/components/ui/: Button.tsx
frontend/src/components/window/: TitleBar.tsx  WindowControls.tsx
frontend/src/hooks/: useMessageHistory.tsx  useStatusMessage.tsx  useTheme.ts  useVRChatStatus.ts
frontend/src/locales/: en.json  ja.json  kip.json
frontend/src/stores/: useSettingsStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: shortcut.ts  toast.ts
frontend/wailsjs/go/: models.ts
frontend/wailsjs/go/main/: App.d.ts  App.js
src/: main.py  main.rs  osc_client.py  settings.py  settings_window.py
website/: astro.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.js
website/.astro/: data-store.json  settings.json
website/src/components/: ThemeToggle.astro
website/src/layouts/: Layout.astro
website/src/pages/: downloaded.astro  index.astro
website/src/styles/: global.css
