[project]
name = "vrchat-ime-chat"
version = "0.1.0"
description = "VRChat用のIME対応フローティングチャットウィンドウ"
authors = [
    { name = "⛐", email = "26d0@tuta.io" }
]
dependencies = [
    "customtkinter>=5.2.2",
    "python-osc>=1.9.3",
    "nuitka>=2.5.9",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.scripts]
build = "python -m nuitka --enable-plugin=tk-inter --follow-imports --standalone --onefile --output-dir=build --output-filename=vic src/main.py"
clean = "rm -rf build/* *.build *.dist *.onefile-build"

[tool.ruff]
select = ["E", "F", "B", "I", "W"]
ignore = []
line-length = 88
target-version = "py38"
src = ["src"]
