[project]
name = "vrchat-ime-chat"
version = "0.1.0"
description = "VRChat用のIME対応フローティングチャットウィンドウ"
authors = [
    { name = "⛐", email = "26d0@tuta.io" }
]
dependencies = [
    "customtkinter>=5.2.2",
    "python-osc>=1.9.3",
    "nuitka>=2.5.9",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
select = ["E", "F", "B", "I", "W"]
ignore = []
line-length = 88
target-version = "py312"
src = ["src"]
